--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@casl/ability": "^6.7.1",
+    "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
